# mpm-workflow

./: .gitignore  1.create_psd.R  2.curate_psd.R  Dockerfile  LICENSE  README.md  create_psd.Rmd  fit_models.py  m_pmb_sigprior_v2.stan  parallel_run_model.sh  pyproject.toml  requirements-pystan2.txt
ansible/: playbook.yml
ansible/inventories/: psd.yml
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/docker/templates/: daemon.json.j2
ansible/roles/rclone/: README.md
ansible/roles/rclone/defaults/: main.yml
ansible/roles/rclone/tasks/: main.yml
terraform/: .gitignore
terraform/ondemand/: main.tf  outputs.tf  variables.tf
terraform/spot/: main.tf  outputs.tf  variables.tf
